--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "rabbit-catch-hardhat"]
 	path = rabbit-catch-hardhat
-	url = https://github.com/chinese-zodiac/rabbit-catch
+	url = https://github.com/shreedee/rabbit-catch.git
