--- a/app/package.json
+++ b/app/package.json
@@ -65,6 +65,7 @@
     "react-dom": "^17.0.2",
     "react-refresh": "^0.11.0",
     "react-responsive": "^9.0.0-beta.5",
+    "react-router-dom": "^6.2.1",
     "resolve": "^1.20.0",
     "resolve-url-loader": "^4.0.0",
     "sass": "^1.48.0",
