--- a/app/package.json
+++ b/app/package.json
@@ -3,6 +3,7 @@
   "name": "rabbit-cache",
   "version": "0.1.0",
   "private": true,
+  "homepage": ".",
   "dependencies": {
     "@babel/core": "^7.16.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
